--- a/Firstproject.html
+++ b/Firstproject.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MY Assignment</title>
-    <link rel="stylesheet" href="first assignment.css" />
+    <link rel="stylesheet" href="firstproject.css" />
     <link rel="about page" href="about.html" />
     <link rel="contact" href="loginpage.html" />
   </head>
