--- a/Firstproject.html
+++ b/Firstproject.html
@@ -14,8 +14,11 @@
         <!-- logo -->
         <div>
           <a href="#" class="logo">
-            <img src="https://drive.google.com/drive/folders/1J5q-
-  -k9N-H6wNrg-AwlcRkvy7-IpXdj-/logo.png" alt="ENERGIZE LOGO">
+            <img
+              src="https://drive.google.com/drive/folders/1J5q-
+  -k9N-H6wNrg-AwlcRkvy7-IpXdj-/logo.png"
+              alt="ENERGIZE LOGO"
+            />
           </a>
         </div>
 
@@ -34,32 +37,44 @@
         </ul>
       </nav>
     </header>
-   
+
     <section class="hero">
-    <div class="hero-message">
-      <h1>Transform Your Fitness Journey. Start Today!</h1>
-      <p>Track workouts, monitor progress, and achieve your goals with our all-in-one fitness app.</p>
-      <div class="hero-buttons">
-        <button class="GS-button">Get Started</button>
-        <br><br>
-        <button class="demo-button">Book a Demo</button>
+      <div class="hero-message">
+        <h1>Transform Your Fitness Journey. Start Today!</h1>
+        <p>
+          Track workouts, monitor progress, and achieve your goals with our
+          all-in-one fitness app.
+        </p>
+        <div class="hero-buttons">
+          <button class="GS-button">Get Started</button>
+          <br /><br />
+          <button class="demo-button">Book a Demo</button>
+        </div>
       </div>
-    </div>
-    <div class="hero-image">
-      <img src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css/logo.png" alt="HERO-BG-MOBILE" />
-      <img src="C:\Users\user\Desktop\Energize-tools\hero-bg.png" alt="HERO-BG">
-    </div>
-  </section>
-  <br /><br />
+      <div class="hero-image">
+        <img
+          src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css/logo.png"
+          alt="HERO-BG-MOBILE"
+        />
+        <img
+          src="C:\Users\user\Desktop\Energize-tools\hero-bg.png"
+          alt="HERO-BG"
+        />
+      </div>
+    </section>
+    <br /><br />
     <section class="cta">
-<h2>Discover how our app works and get fit in no time</h2>
-<br>
-<div class="cta-image">
-<img src="C:\Users\user\Desktop\Energize-tools\video-preview.png" alt="VIDEO PREVIEW LOGO">
-<br>
-<button class="cta-button">Get Started</button>
-</div>
-<br />
+      <h2>Discover how our app works and get fit in no time</h2>
+      <br />
+      <div class="cta-image">
+        <img
+          src="C:\Users\user\Desktop\Energize-tools\video-preview.png"
+          alt="VIDEO PREVIEW LOGO"
+        />
+        <br />
+        <button class="cta-button">Get Started</button>
+      </div>
+      <br />
     </section>
     <section class="testimonials">
       <h2>Hear from our satisfied users who transformed their lives.</h2>
@@ -102,8 +117,8 @@
         <div class="basic-plan">
           <h2>Basic</h2>
           <h4>Ideal for beginners to track workouts and monitor progress.</h4>
-          <span style="font-size: 2em">Free</span><span>*No credit card needed</span>
-          <br><br>
+          <span style="font-size: 2em">Free</span
+          ><span>*No credit card needed</span> <br /><br />
           <div class="horizontal-line1"></div>
           <br />
           <p class="price"></p>
@@ -113,7 +128,7 @@
             <li>Nutrition tracker</li>
             <li>Access to community challenges</li>
           </ul>
-          <br>
+          <br />
           <button class="basic-button">Get started</button>
         </div>
         <div class="pro-plan">
@@ -135,7 +150,12 @@
           <button>Get started</button>
         </div>
       </div>
-      <br>
+      <br />
+      <h3>
+        All prices are in USD and charged per month with applicable taxes
+        charged at checkout.
+      </h3>
+      <br />
     </section>
     <section class="faq-section">
       <h2>Frequently Asked Questions</h2>
@@ -150,13 +170,17 @@
             how can the app help me achieve my fitness goals?<span>+</span>
           </div>
           <div class="faq-answer">
-            The app provides tailored workout plans, tracks your progress and offers motivation to keep you on track.
+            The app provides tailored workout plans, tracks your progress and
+            offers motivation to keep you on track.
           </div>
         </div>
         <div class="faq-item">
-          <div class="faq-question">Can I customize my workout plans?<span>+</span></div>
+          <div class="faq-question">
+            Can I customize my workout plans?<span>+</span>
+          </div>
           <div class="faq-answer">
-            Yes, you can create personalized workout plans based on your fitness level and goals.
+            Yes, you can create personalized workout plans based on your fitness
+            level and goals.
           </div>
         </div>
         <div class="faq-item">
@@ -164,7 +188,8 @@
             Is there a free trial available?<span>+</span>
           </div>
           <div class="faq-answer">
-            Yes, you can start with our free basic plan to explore features before upgrading.
+            Yes, you can start with our free basic plan to explore features
+            before upgrading.
           </div>
         </div>
       </div>
@@ -188,9 +213,9 @@
           }
         });
       });
-    </script>   
+    </script>
     <footer>
-      <img>
+      <img />
       <div class="container">
         <p>Privacy policy</p>
         <p>Terms of Service</p>
