--- a/about.html
+++ b/about.html
@@ -12,14 +12,14 @@
       <div class="about-container">
         <h1>About Us</h1>
         <p>
-          Energize is a passionate fitness team committed to staying healthy and building the perfect body shape.
+          At Energize, we are a professional fitness brand committed to building a healthy fit society.
         </p>
 
         <div class="about-cards">
           <div class="card">
             <h3>Our Mission</h3>
             <p>
-              To provide physical health solutions at affordable cost.
+              To provide physical and health solutions at affordable cost.
             </p>
           </div>
           <div class="card">
