--- a/loginpage.html
+++ b/loginpage.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="login.css" />
-</head>
-<body>
-     <section class="login">
-        <h2>Form</h2>
-        <form class="login-form" id="form">
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="Your full name"/>
-            <br /><br />
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Your email address"/>
-             <br /><br />
-             <label for="password">Password</label>
-    <input type="password" placeholder="Enter your password" id="password" />
+    <link rel="stylesheet" href="loginpage.css" />
+  </head>
+  <body>
+    <section class="login">
+      <h2>Form</h2>
+      <form class="login-form" id="form">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" placeholder="Your full name" />
+        <br /><br />
+        <label for="email">Email</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="Your email address"
+        />
+        <br /><br />
+        <label for="password">Password</label>
+        <input
+          type="password"
+          placeholder="Enter your password"
+          id="password"
+        />
 
-             <br /><br />
-          <button type="submit">Login</button>
-        </form>
+        <br /><br />
+        <button type="submit">Login</button>
+      </form>
     </section>
-</body>
+  </body>
 </html>
