--- a/Firstproject.html
+++ b/Firstproject.html
@@ -14,12 +14,7 @@
         <!-- logo -->
         <div>
           <a href="#" class="logo">
-            <img
-              src="https://drive.google.com/drive/folders/1J5q-
-  -k9N-H6wNrg-AwlcRkvy7-IpXdj-/logo.png"
-              alt="ENERGIZE LOGO"
-            />
-          </a>
+            <img src="https://drive.google.com/drive/folders/1J5q--k9N-H6wNrg-AwlcRkvy7-IpXdj-/logo.png" alt="ENERGIZE LOGO" /></a>
         </div>
 
         <!-- toggle button -->
@@ -53,13 +48,8 @@
       </div>
       <div class="hero-image">
         <img
-          src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css/logo.png"
-          alt="HERO-BG-MOBILE"
-        />
-        <img
-          src="C:\Users\user\Desktop\Energize-tools\hero-bg.png"
-          alt="HERO-BG"
-        />
+          src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css/logo.png" alt="HERO-BG-MOBILE" />
+        <img src="C:/Users/user/khardy/assets/hero-bg.png" alt="HERO-BG" />
       </div>
     </section>
     <br /><br />
@@ -68,7 +58,7 @@
       <br />
       <div class="cta-image">
         <img
-          src="C:\Users\user\Desktop\Energize-tools\video-preview.png"
+          src="C:/Users/user/khardy/video-preview.png"
           alt="VIDEO PREVIEW LOGO"
         />
         <br />
